--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emoji-render": "^1.2.4",
     "react-hook-form": "^7.9.0",
     "react-icons": "^4.2.0",
     "react-material-ui-carousel": "^2.2.6",
