--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-scroll-up": "^1.3.7",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2"
   },
