--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-emoji-render": "^1.2.4",
     "react-hook-form": "^7.9.0",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
